fix: add VITE_API_URL in client env

--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
 VITE_API_BASE=http://localhost:8080
-VITE_API_URL=https://auction-starter.onrender.com
+VITE_API_URL=https://auction-starter-backend-pls.onrender.com
 
 DATABASE_URL=postgresql://postgres:nityamhjn05@db.bvwpmvrfrstdvredadsd.supabase.co:5432/postgres?sslmode=require
 DB_SSL=true
